# scnvim

./: CMakeLists.txt  Makefile
plugin/: supercollider.vim
syntax/: supercollider.vim
